support ssh protocol config choose if reuse connection (#1136)